--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,32 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="br.com.impacta.breathmobi_app">
+    package="br.com.impacta.breathmobi_app" >
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-
         android:allowBackup="true"
         android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".Splash_Loading">
+        android:theme="@style/AppTheme" >
+        <activity android:name=".Splash_Loading" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".View.MainActivity"
-            android:theme="@style/AppTheme.Login"/>
-        <activity android:name=".View.CadastroCliente"/>
-        <activity android:name=".View.Logado"/>
-        <activity android:name=".View.EditarCliente"/>
-
-
-
+        <activity
+            android:name=".View.MainActivity"
+            android:theme="@style/AppTheme.Login" />
+        <activity android:name=".View.CadastroCliente" />
+        <activity android:name=".View.Logado" />
+        <activity android:name=".View.EditarCliente" />
     </application>
 
 </manifest>
