--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,9 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile('com.mikepenz:materialdrawer:2.9.8@aar') {
+        transitive = true
+    }
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.0.1'
     compile 'com.firebase:firebase-client-android:2.5.2+'
