--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     compile 'com.android.support:design:23.0.1'
     compile 'com.firebase:firebase-client-android:2.5.2+'
     compile 'com.firebaseui:firebase-ui:0.3.1'
+    compile 'com.nispok:snackbar:2.10.+'
+
 }
